--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -8,88 +8,102 @@
 </ion-header>
 
 <ion-content>
-  <ion-row>
-    <ion-col size="12">
-      <ion-label>Organization Snapshot</ion-label>
-    </ion-col>
-    <ion-col>
-      <h2>55</h2>
-      <ion-note>active members</ion-note>
-    </ion-col>
-    <ion-col>
-      <h2>55</h2>
-      <ion-note>small groups</ion-note>
-    </ion-col>
-    <ion-col>
-      <h2>55</h2>
-      <ion-note>1:1 relationships</ion-note>
-    </ion-col>
-  </ion-row>
-  <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
-    <ngx-charts-line-chart
-            [scheme]="colorScheme"
-            [schemeType]="schemeType"
-            [legend]="legend"
-            [showXAxisLabel]="showXAxisLabel"
-            [showYAxisLabel]="showYAxisLabel"
-            [xAxis]="xAxis"
-            [xAxisTickFormatting]="dateTickFormatting"
-            [yAxis]="yAxis"
-            [xAxisLabel]="xAxisLabel"
-            [xScaleMin]="xScaleMin"
-            [yAxisLabel]="yAxisLabel"
-            [timeline]="timeline"
-            [results]="multi"
-    >
-    </ngx-charts-line-chart>
-        <ion-select interface="action-sheet" slot="end" placeholder="see options"
-          (ionChange)="loadMetrics($event.target.value)">
-          <!-- 30 days, 90 days, this year, last year -->
-          <ion-select-option value=thisWeek>This Week</ion-select-option>
-          <ion-select-option value=thisMonth>This Month</ion-select-option>
-          <ion-select-option value=30>30 Days</ion-select-option>
-          <ion-select-option value=90>90 Days</ion-select-option>
-          <ion-select-option value=thisYear>This Year</ion-select-option>
-          <ion-select-option>Last Year (n/a yet)</ion-select-option>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-label>Organization Snapshot</ion-label>
+      </ion-col>
+      <ion-col>
+        <h2>55</h2>
+        <ion-note>active members</ion-note>
+      </ion-col>
+      <ion-col>
+        <h2>55</h2>
+        <ion-note>small groups</ion-note>
+      </ion-col>
+      <ion-col>
+        <h2>55</h2>
+        <ion-note>1:1 relationships</ion-note>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="11">
+        <ion-label>Overall Health</ion-label>
+      </ion-col>
+      <ion-col size="1">
+        <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
+      </ion-col>
+      <ion-col size="5">pie graph</ion-col>
+      <ion-col size="7">list of items</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
+        <ngx-charts-line-chart
+                [scheme]="colorScheme"
+                [schemeType]="schemeType"
+                [legend]="legend"
+                [showXAxisLabel]="showXAxisLabel"
+                [showYAxisLabel]="showYAxisLabel"
+                [xAxis]="xAxis"
+                [xAxisTickFormatting]="dateTickFormatting"
+                [yAxis]="yAxis"
+                [xAxisLabel]="xAxisLabel"
+                [xScaleMin]="xScaleMin"
+                [yAxisLabel]="yAxisLabel"
+                [timeline]="timeline"
+                [results]="multi"
+        >
+        </ngx-charts-line-chart>
+            <ion-select interface="action-sheet" slot="end" placeholder="see options"
+              (ionChange)="loadMetrics($event.target.value)">
+              <!-- 30 days, 90 days, this year, last year -->
+              <ion-select-option value=thisWeek>This Week</ion-select-option>
+              <ion-select-option value=thisMonth>This Month</ion-select-option>
+              <ion-select-option value=30>30 Days</ion-select-option>
+              <ion-select-option value=90>90 Days</ion-select-option>
+              <ion-select-option value=thisYear>This Year</ion-select-option>
+              <ion-select-option>Last Year (n/a yet)</ion-select-option>
+            </ion-select>
+      </ion-toolbar>
+    </ion-row>
+    <ion-toolbar>
+      <ion-item>
+        <ion-label [hidden]="true">Filter by Program</ion-label>
+        <ion-select [(ngModel)]="selectedProgramId" slot="end" placeholder="Show All">
+          <ion-select-option value='all'>Show All</ion-select-option>
+          <ion-select-option *ngFor="let program of listOfPrograms" [value]="program._id" [class.selected]="selectedProgramId === program._id">{{program.name}}</ion-select-option>
         </ion-select>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-item>
-      <ion-label [hidden]="true">Filter by Program</ion-label>
-      <ion-select [(ngModel)]="selectedProgramId" slot="end" placeholder="Show All">
-        <ion-select-option value='all'>Show All</ion-select-option>
-        <ion-select-option *ngFor="let program of listOfPrograms" [value]="program._id" [class.selected]="selectedProgramId === program._id">{{program.name}}</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-toolbar>
-  <ion-list>  <!--*ngIf="platform.width() > 768"-->
-    <ion-item [ngStyle]="{'font-size': platform.width() < 400 ? '11px' : '14px'}">
-      <div class="column column-label" (click)="sortDisplay('participant')">{{participantsLabel}}</div>
-      <div class="column column-label" (click)="sortDisplay('leader')">{{leadersLabel}}</div>
-      <div class="column column-label" (click)="sortDisplay('program')">Program</div>
-      <div class="progress column-label ion-no-margin" slot="end" (click)="sortDisplay('progress')">Progress</div>
-      <div class="last-date column-label ion-no-margin" slot="end" (click)="sortDisplay('lastDate')">Last Check-in</div>
-    </ion-item>
-    <ion-item *ngFor="let relationship of relationshipCompletion" (click)="openProgram($event, relationship)" [hidden]="selectedProgramId && ![relationship.program._id, 'all'].includes(selectedProgramId)">
-      <div *ngFor="let participant of relationship.participants | slice : 0 : 1" (click)="seeUserInfo($event, relationship.participants[0])" class="column">
-        <ion-avatar class="insight-person-avatar">
-          <img class="response-user-img" *ngIf="participant.avatar" [src]="participant.avatar"/>
-          <img class="response-user-img" *ngIf="!participant.avatar" src="assets/img/avatar-default.jpg"/>
-        </ion-avatar>
-        <ion-label class="insight-person-label ion-text-center ion-text-wrap">{{participant.first_name}} {{participant.last_name}}</ion-label>
-      </div>
-      <div *ngFor="let leader of relationship.leaders | slice : 0 : 1" (click)="seeUserInfo($event, relationship.leaders[0])" class="column">
-        <ion-avatar class="insight-person-avatar">
-          <img class="response-user-img" *ngIf="leader.avatar" [src]="leader.avatar"/>
-          <img class="response-user-img" *ngIf="!leader.avatar" src="assets/img/avatar-default.jpg"/>
-        </ion-avatar>
-        <ion-label class="insight-person-label ion-text-center ion-text-wrap">{{leader.first_name}} {{leader.last_name}}</ion-label>
-      </div>
-      <div class="column">
-        <ion-label class="insight-person-label ion-text-center ion-text-wrap">{{relationship.program.name}}</ion-label>
-      </div>
-      <ion-progress-bar class="progress ion-no-margin" [value]="relationship.completed_count/relationship.content_calendar_count" [buffer]="relationship.past_due_count/relationship.content_calendar_count" slot="end"></ion-progress-bar>
-      <div class="last-date small-font ion-text-wrap ion-no-margin" slot="end">{{relationship.last_response_date | datetime: 'm:n,d:n,y:n'}}</div>
-    </ion-item>
-  </ion-list>
+      </ion-item>
+    </ion-toolbar>
+    <ion-list>  <!--*ngIf="platform.width() > 768"-->
+      <ion-item [ngStyle]="{'font-size': platform.width() < 400 ? '11px' : '14px'}">
+        <div class="column column-label" (click)="sortDisplay('participant')">{{participantsLabel}}</div>
+        <div class="column column-label" (click)="sortDisplay('leader')">{{leadersLabel}}</div>
+        <div class="column column-label" (click)="sortDisplay('program')">Program</div>
+        <div class="progress column-label ion-no-margin" slot="end" (click)="sortDisplay('progress')">Progress</div>
+        <div class="last-date column-label ion-no-margin" slot="end" (click)="sortDisplay('lastDate')">Last Check-in</div>
+      </ion-item>
+      <ion-item *ngFor="let relationship of relationshipCompletion" (click)="openProgram($event, relationship)" [hidden]="selectedProgramId && ![relationship.program._id, 'all'].includes(selectedProgramId)">
+        <div *ngFor="let participant of relationship.participants | slice : 0 : 1" (click)="seeUserInfo($event, relationship.participants[0])" class="column">
+          <ion-avatar class="insight-person-avatar">
+            <img class="response-user-img" *ngIf="participant.avatar" [src]="participant.avatar"/>
+            <img class="response-user-img" *ngIf="!participant.avatar" src="assets/img/avatar-default.jpg"/>
+          </ion-avatar>
+          <ion-label class="insight-person-label ion-text-center ion-text-wrap">{{participant.first_name}} {{participant.last_name}}</ion-label>
+        </div>
+        <div *ngFor="let leader of relationship.leaders | slice : 0 : 1" (click)="seeUserInfo($event, relationship.leaders[0])" class="column">
+          <ion-avatar class="insight-person-avatar">
+            <img class="response-user-img" *ngIf="leader.avatar" [src]="leader.avatar"/>
+            <img class="response-user-img" *ngIf="!leader.avatar" src="assets/img/avatar-default.jpg"/>
+          </ion-avatar>
+          <ion-label class="insight-person-label ion-text-center ion-text-wrap">{{leader.first_name}} {{leader.last_name}}</ion-label>
+        </div>
+        <div class="column">
+          <ion-label class="insight-person-label ion-text-center ion-text-wrap">{{relationship.program.name}}</ion-label>
+        </div>
+        <ion-progress-bar class="progress ion-no-margin" [value]="relationship.completed_count/relationship.content_calendar_count" [buffer]="relationship.past_due_count/relationship.content_calendar_count" slot="end"></ion-progress-bar>
+        <div class="last-date small-font ion-text-wrap ion-no-margin" slot="end">{{relationship.last_response_date | datetime: 'm:n,d:n,y:n'}}</div>
+      </ion-item>
+    </ion-list>
+  </ion-grid>
 </ion-content>
