update tos link in webapp

--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -230,7 +230,7 @@
                         </div>
                       </form>
                       <div></div><!--Do not remove! This fixes the white line issue at the bottom-->
-                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
+                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/tos" target="_blank">Terms of Services</a>.</p>
                       <ion-row>
                         <ion-col>
                           <ion-button id="createEmailAccount" [disabled]="!nameForm.valid || !emailPassForm.valid" shape="round" color="primary" (click)="registerEmail()">Create Account</ion-button>
