change privacy link to terms of service link

--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -274,7 +274,7 @@
                         </div>
                       </form>
                       <p class="centered">We will send you a SMS message to verify this number. Standard SMS rate applies.</p>
-                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
+                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/tos" target="_blank">Terms of Services</a>.</p>
                       <ion-row>
                         <ion-col>
                           <ion-button id="createMobileAccount" shape="round" color="primary" (click)="registerMobile()" [disabled]="!nameForm.valid || !mobileForm.valid">Send the SMS Code</ion-button>
