remove ngx-autosize, instead use ion-textarea autoGrow property

--- a/src/app/pages/board/editboardpost/editboardpost.page.scss
+++ b/src/app/pages/board/editboardpost/editboardpost.page.scss
@@ -8,6 +8,11 @@ app-editboardpost {
     position:relative !important;
   }
 
+  ion-textarea {
+    --background: transparent !important;
+    max-height: 160px;
+  }
+
   .pixabay-grid {
     max-height: 200px;
     overflow: scroll;
