--- a/src/app/pages/community/editcommunity/editcommunity.page.html
+++ b/src/app/pages/community/editcommunity/editcommunity.page.html
@@ -48,7 +48,7 @@
       </ion-item-divider>
       <ion-item>
         <ion-label position="stacked">Keywords</ion-label>
-        <ion-textarea autosize rows="1" [minRows]="1" [maxRows]="3" autocorrect="on" formControlName="keywords" placeholder="ex. Advocacy, mercy and justice, worship etc." ></ion-textarea>
+        <ion-textarea autoGrow="true" rows="1" formControlName="keywords" placeholder="ex. Advocacy, mercy and justice, worship etc." ></ion-textarea>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Email</ion-label>
