--- a/src/app/pages/feature/editfeature/editfeature.page.scss
+++ b/src/app/pages/feature/editfeature/editfeature.page.scss
@@ -28,6 +28,11 @@ app-editfeature, app-editparticipants {
     position: relative !important;
   }
 
+  ion-textarea {
+    --background: transparent !important;
+    max-height: 60px;
+  }
+
   .title {
     text-wrap: normal;
     font-size: 20px;
