--- a/src/app/pages/group/editgroup/editgroup.page.html
+++ b/src/app/pages/group/editgroup/editgroup.page.html
@@ -54,7 +54,7 @@
         </ion-item-group>-->
         <ion-item>
           <ion-label position="stacked">Description</ion-label>
-          <ion-textarea autosize rows="3" [minRows]="3" [maxRows]="8" class="detailstextarea" type="text" formControlName="details"></ion-textarea>
+          <ion-textarea autoGrow="true" rows="3" class="detailstextarea" type="text" formControlName="details"></ion-textarea>
         </ion-item>
         <!--<ion-item-group lines="none">
           <ion-item lines="none" (click)="showOptional = !showOptional">
