--- a/src/app/pages/board/editboardpost/editboardpost.page.html
+++ b/src/app/pages/board/editboardpost/editboardpost.page.html
@@ -23,7 +23,7 @@
     <ion-list>
         <ion-item lines="none">
             <ion-label class="post-label"><ion-icon name="chatbox" color="grey"></ion-icon></ion-label>
-            <ion-textarea rows="1" [minRows]="1" [maxRows]="8" autosize autocorrect="on" [placeholder]="resource['en-US'].matrix_string[0][4]" [(ngModel)]="post.body"></ion-textarea>
+            <ion-textarea autoGrow="true" rows="1" [placeholder]="resource['en-US'].matrix_string[0][4]" [(ngModel)]="post.body"></ion-textarea>
         </ion-item>
         <ion-item *ngIf="awsService.sessionAssets?.length" lines="none">
             <div class="event-photo-container" *ngIf="(['jpg', 'jpeg', 'gif', 'png']).indexOf(awsService.sessionAssets[0].substring(awsService.sessionAssets[0].lastIndexOf('.') + 1).toLowerCase()) > -1" >
