--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -34,7 +34,7 @@
     <!--title-->
     <ion-item lines="none">
       <div class="moment-label" slot="start"><ion-icon class="side-icon" color="grey" name="brush"></ion-icon></div>
-      <ion-textarea [(ngModel)]="moment.matrix_string[resource.matrix_number[0].indexOf(10000)][0]" rows="1" [minRows]="1" [maxRows]="4" autosize (focus)="change.detach()" (blur)="change.reattach();" [placeholder]="moment.resource['en-US'].value[0] + ' ' + resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10000)][1]"></ion-textarea>
+      <ion-textarea [(ngModel)]="moment.matrix_string[resource.matrix_number[0].indexOf(10000)][0]" autoGrow="true" rows="1" (focus)="change.detach()" (blur)="change.reattach();" [placeholder]="moment.resource['en-US'].value[0] + ' ' + resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10000)][1]"></ion-textarea>
     </ion-item>
     <!--Onboarding Options-->
     <ion-item-group *ngIf="moment.program && moment.program.length">
@@ -376,7 +376,6 @@
                 [modules]="{ toolbar: this.quillEditorToolbarConfig }" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][2]"
                 [styles]="{'height': '300px', 'font-family': 'Roboto,Helvetica Neue,sans-serif'}" format="object">
             </quill-editor>
-            <!--<ion-textarea class="moment-input" rows="4" [minRows]="1" [maxRows]="6" autosize (focus)="change.detach()" (blur)="change.reattach();" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][2]" [(ngModel)]="moment.matrix_string[i][0]"></ion-textarea>-->
           </ion-item>
           <ion-item *ngIf="item === 10010 && resource['en-US'].value.length > 36 && (moment.resource.matrix_number[0].includes(20010) || moment.matrix_string[i].length > 11)" lines="none"> <!--textarea media section, onboarding view only, or if media has already been added from before-->
             <ion-button shape="round" fill="solid" (click)="openUploadMedia(i, item)">{{resource['en-US'].value[36]}}</ion-button>
@@ -554,7 +553,7 @@
               <ion-label class="moment-input">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][0]}}</ion-label>
             </ion-item>
             <ion-item>
-              <ion-textarea rows="1" [minRows]="1" [maxRows]="4" autosize [(ngModel)]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][1]" (ionChange)="templateChanged = true" (focus)="change.detach()" (blur)="change.reattach();"></ion-textarea>
+              <ion-textarea autoGrow="true" rows="1" [(ngModel)]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][1]" (ionChange)="templateChanged = true" (focus)="change.detach()" (blur)="change.reattach();"></ion-textarea>
             </ion-item>
             <ion-item *ngFor="let option of moment.matrix_string[i]; trackBy: customTrackBy; let j = index;">
               <span class="option-number">{{j+1}}.</span>
@@ -583,7 +582,7 @@
               <ion-input style="width: 10%; text-align: right" class="ion-margin-left" type="number" [placeholder]="moment.matrix_string[i]?.length" [max]="moment.matrix_string[i]?.length" [(ngModel)]="moment.matrix_number[i][1]" slot="end"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-textarea rows="1" [minRows]="1" [maxRows]="4" autosize [(ngModel)]="moment.resource['en-US'].matrix_string[i][1]" (ionChange)="templateChanged = true" (focus)="change.detach()" (blur)="change.reattach();"></ion-textarea>
+              <ion-textarea autoGrow="true" rows="1" [(ngModel)]="moment.resource['en-US'].matrix_string[i][1]" (ionChange)="templateChanged = true" (focus)="change.detach()" (blur)="change.reattach();"></ion-textarea>
             </ion-item>
             <ion-item *ngFor="let option of moment.matrix_string[i]; trackBy: customTrackBy; let j = index;">
               <span class="option-number">{{j+1}}.</span>
@@ -605,7 +604,7 @@
             </ion-item>
             <ion-item> <!--Question-->
               <ion-label style="width: 90%" position="stacked">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][1]}}</ion-label>
-              <ion-textarea rows="1" autoGrow maxlength="500" [(ngModel)]="moment.matrix_string[i][0]" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][2]" (ionChange)="templateChanged = true"></ion-textarea>
+              <ion-textarea autoGrow="true" rows="1" maxlength="500" [(ngModel)]="moment.matrix_string[i][0]" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][2]" (ionChange)="templateChanged = true"></ion-textarea>
             </ion-item>
             <ion-item> <!--Label-->
               <ion-label style="width: 90%" position="stacked">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][4]}}</ion-label>
@@ -661,7 +660,7 @@
               </ion-select>
             </ion-item>
             <ion-item>
-              <ion-textarea rows="1" [minRows]="1" [maxRows]="4" autosize [(ngModel)]="moment.resource['en-US'].matrix_string[i][1]" (ionChange)="templateChanged = true" (focus)="change.detach()" (blur)="change.reattach();"></ion-textarea>
+              <ion-textarea autoGrow="true" rows="1" [(ngModel)]="moment.resource['en-US'].matrix_string[i][1]" (ionChange)="templateChanged = true" (focus)="change.detach()" (blur)="change.reattach();"></ion-textarea>
             </ion-item>
             <div *ngFor="let option of moment.matrix_string[i]; trackBy: customTrackBy; let j = index;">
               <ion-item *ngIf="j % 2 == 0"> <!--only even index is shown, e.g. 0, 2, 4, 6, etc-->
